<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ev.evtron.fragments.MapsFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_maps"/>


    <fragment
        android:id="@+id/nav_favourites"
        android:name="com.ev.evtron.activities.ui.home.HomeFragment"
        android:label="@string/favourites"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_charging"
        android:name="com.ev.evtron.activities.ui.gallery.GalleryFragment"
        android:label="@string/charge"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_explore"
        android:name="com.ev.evtron.activities.ui.slideshow.SlideshowFragment"
        android:label="@string/explore"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.ev.evtron.activities.ui.slideshow.SlideshowFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_slideshow" />
</navigation>