<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    tools:context=".activities.PersonalInformationActivity">

    <TextView
        android:id="@+id/tvPersonal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="@dimen/primaryTextSize"
        android:text="@string/personal"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="32dp"/>

    <ImageView
        android:id="@+id/tvImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@+id/tvPersonal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="28dp"
        android:src="@drawable/ic_baseline_person_24"/>

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/first_name"
        android:textColor="@color/elephant_grey"
        android:textSize="@dimen/sixteen"
        android:background="@null"
        android:inputType="text"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/elephant_grey"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColor="@color/elephant_grey"
        android:textSize="@dimen/sixteen"
        android:hint="@string/last_name"
        android:background="@null"
        android:inputType="text"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/elephant_grey"
        app:layout_constraintTop_toBottomOf="@+id/etLastName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/etMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etLastName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColor="@color/elephant_grey"
        android:textSize="@dimen/sixteen"
        android:hint="@string/mobile_number"
        android:background="@null"
        android:inputType="number"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/elephant_grey"
        app:layout_constraintTop_toBottomOf="@+id/etMobile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etMobile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColor="@color/elephant_grey"
        android:textSize="@dimen/sixteen"
        android:hint="@string/email"
        android:background="@null"
        android:inputType="textEmailAddress"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/elephant_grey"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="8dp"/>

<!--    <RadioButton-->
<!--        android:id="@+id/rbEV"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/etEmail"-->
<!--        android:layout_marginTop="30dp"-->
<!--        android:layout_marginStart="36dp"-->
<!--        android:button="@drawable/radio_bg"-->
<!--        android:paddingStart="8dp"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="EV"/>-->


<!--    <RadioButton-->
<!--        android:id="@+id/rbNonEV"-->
<!--        android:layout_marginTop="30dp"-->
<!--        android:layout_marginStart="36dp"-->
<!--        app:layout_constraintLeft_toRightOf="@id/rbEV"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/etEmail"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:button="@drawable/radio_bg"-->
<!--        android:paddingStart="8dp"-->
<!--        android:text="Non EV"/>-->


    <Spinner
        android:id="@+id/spCarBrand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="@dimen/sixteen"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/elephant_grey"
        app:layout_constraintTop_toBottomOf="@+id/spCarBrand"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="8dp"/>

    <Spinner
        android:id="@+id/spCarModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/spCarBrand"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="@dimen/sixteen"
        />
    <View
        android:id="@+id/vwview"
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:background="@color/elephant_grey"
        app:layout_constraintTop_toBottomOf="@+id/spCarModel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="8dp"/>

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_marginStart="40dp"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/vwview"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        android:text="RC Book"/>-->


<!--    <TextView-->
<!--        android:id="@+id/tvSkip"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/skip_now"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/btnSave"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--       android:layout_marginBottom="32dp"-->
<!--        android:textSize="@dimen/sixteen"-->
<!--        android:textColor="@color/elephant_grey"-->
<!--        />-->

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/round_green_button_square"
        android:textColor="@color/white"
        android:text="@string/save"/>

</androidx.constraintlayout.widget.ConstraintLayout>