<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".activities.SlotBookingActivity">

    <ImageView
        android:id="@+id/ivCancel"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_baseline_cancel_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvslotdetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/slot_booking"
        android:textColor="@color/black"
        android:textSize="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvslotdetails">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/green"
            android:paddingBottom="24dp">


            <TextView
                android:id="@+id/tvScheduleTime"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/scheduler_time"
                android:textColor="@color/white"
                android:textSize="@dimen/sixteen"
                android:gravity="center"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/llscheduletime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                app:layout_constraintTop_toBottomOf="@+id/tvScheduleTime">

                <LinearLayout
                    android:id="@+id/llFromtime"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/otp_edittext"
                    android:weightSum="1"
                    app:layout_constraintLeft_toLeftOf="parent">

                    <TextView
                        android:id="@+id/tvTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:layout_weight=".75"
                        android:gravity="center"
                        android:text="00:00 AM"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sixteen"
                        app:layout_constraintTop_toBottomOf="@+id/tvScheduleTime" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="4dp"
                        android:layout_weight=".25"
                        android:src="@drawable/ic_baseline_schedule_24" />


                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="---->"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sixteen" />


                <LinearLayout
                    android:id="@+id/llTotime"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/otp_edittext"
                    android:weightSum="1"
                    app:layout_constraintLeft_toLeftOf="parent">

                    <TextView
                        android:id="@+id/tvToTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:layout_weight=".75"
                        android:gravity="center"
                        android:text="00:00 PM"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sixteen"
                        app:layout_constraintTop_toBottomOf="@+id/tvScheduleTime" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="4dp"
                        android:layout_weight=".25"
                        android:src="@drawable/ic_baseline_schedule_24" />


                </LinearLayout>


            </LinearLayout>


            <TextView
                android:id="@+id/tvScheduleDate"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:text="@string/scheduler_date"
                android:textColor="@color/white"
                android:textSize="@dimen/sixteen"
                android:gravity="center"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llscheduletime"
                app:layout_constraintLeft_toLeftOf="parent"
                />

            <LinearLayout
                android:id="@+id/llDate"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvScheduleDate"
                android:background="@drawable/otp_edittext"
                app:layout_constraintLeft_toLeftOf="parent">

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="24dp"
                    android:layout_weight=".75"
                    android:gravity="center"
                    android:text="26-01-2000"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sixteen"
                    app:layout_constraintTop_toBottomOf="@+id/tvScheduleTime" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="16dp"
                    android:layout_weight=".25"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_baseline_today_24" />


            </LinearLayout>




        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


    <!--    <TimePicker-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/tvslotdetails"-->
    <!--        android:timePickerMode="spinner"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"/>-->

    <Button
        android:id="@+id/btnbookslots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/round_dark_white_button"
        android:text="@string/book_slot"
        android:textColor="@color/white"
        android:textSize="@dimen/primaryTextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_goneMarginTop="40dp" />


</androidx.constraintlayout.widget.ConstraintLayout>